# kp-medizinische-informatik-ss23

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
eda/: cli.py  config.toml  eda.ipynb  eda.py  requirements.txt
eda/plots/: patient-selection.mmd
eda/plotter/: allICUages.py  allages.py  vitalsigns.py
eda/queries/: avgTimeToOnset.sql  blood_gas_analysis_corr.sql  cohortDetails.sql  demographics_age_icu.sql  demographics_age_icu_sepsis.sql  demographics_age_patients.sql  demographics_age_sepsis.sql  icuWithTimecut.sql  miscNumbers.sql  patient_flow.sql  pre_septic_bg_4h.sql  pre_septic_bg_8h.sql  pre_septic_lab_results_2h.sql  pre_septic_lab_results_4h.sql  pre_septic_lab_results_8h.sql  race.sql  sepsis_onset_relative_to_age.sql  time_to_infection.sql  transfers_sankey.sql  ventilation_corr.sql  vital_signs_corr.sql  vitalsigns.sql
eda/sql/: all_ages.sql  all_icu_ages.sql  altersverteilung.sql  avgTimeInICU.sql  cohort.sql  control.sql  demographics_age_icu.sql  demographics_age_patients.sql  demographics_cohort.sql  demographics_general.sql  dialysis_urine_corr.sql  first_day_bg.sql  first_day_lab_results.sql  first_day_vitalsign.sql  gcs.sql  pairplot.sql  pre_septic_bg.sql  pre_septic_bg_2h.sql  pre_septic_gcs.sql  pre_septic_lab.sql  pre_septic_vitalsign.sql  pre_septic_vitalsign_2h.sql  pre_septic_vitalsign_4h.sql  pre_septic_vitalsign_8h.sql  race_ICU.sql  sepsis3.sql  variables.sql  variables_correlation.sql  variables_filtered.sql  variables_slope.sql  vitalsigns.sql
ml/: ml.ipynb  requirements.txt
report/: report.ipynb
(+11 files in other folders)
